--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^12.4.3",
     "react-native-tab-view": "^3.1.1",
     "yup": "^0.32.11"
   },
