--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.4.3",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
+    "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
