--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.0.0",
     "react-native": "0.69.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-maps": "^1.2.0",
     "react-native-mmkv-storage": "^0.8.0",
     "react-native-pager-view": "^5.4.25",
     "react-native-reanimated": "^2.9.1",
