--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Completeness */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+
+    // config for enabling .env files to work in a typescript projects
+    "typeRoots": ["./src/types"]
   }
 }
