--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.69.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.2.0",
     "react-native-mmkv-storage": "^0.8.0",
     "react-native-pager-view": "^5.4.25",
