--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -22,6 +21,7 @@
     "react-native": "0.70.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv-storage": "^0.8.0",
     "react-native-pager-view": "^5.4.25",
