--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "clean": "react-native-clean-project",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android:dev": "ENVFILE=.env.development react-native run-android",
+    "android:prod-release": "BABEL_ENV=production react-native run-android --variant=release"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
@@ -15,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@sentry/react-native": "^4.6.1",
     "@types/crypto-js": "^4.1.1",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
@@ -50,6 +54,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
